server-java-modern: Java 21 diamond operator + String.formatted() cleanup
Mechanical modernization across 79 files, +147/-148 lines:

Diamond operator (126/129 candidate sites):
  new Type<X>() -> new Type<>() when X can be inferred from the LHS
  declaration, including anonymous-class double-brace init sites that
  Java 9+ supports. Example:
    private final Queue<String> auctionRequests
        = new ConcurrentLinkedQueue<String>();   // before
        = new ConcurrentLinkedQueue<>();          // after
  3 ChannelInitializer<SocketChannel> sites in Server.java were skipped
  because childHandler() accepts the erased ChannelHandler type, so the
  initChannel(SocketChannel) override only resolves correctly with the
  explicit anonymous type argument.

String.format() -> .formatted() (21/22 candidate sites):
  String.format("...", args)     -> "...".formatted(args)
  String.format(TEMPLATE, args)  -> TEMPLATE.formatted(args)
  Skipped 1 commented-out dead-code site. Not touched:
  String.format(locale, fmt, args) has no .formatted() equivalent.

Verified:
- ant compile_core + compile_plugins both succeed, no new warnings
- ./smoke_test.sh: 4/4 tests pass (TCP, WS upgrade, malformed input,
  no IO-thread exceptions)

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>